--- a/README
+++ b/README
@@ -41,20 +41,24 @@ bash$ cd vBaD
 bash$ sbt
 [info] Building project vBaD 0.1 against Scala 2.8.0
 [info]    using vBaDProject with sbt 0.7.4 and Scala 2.8.0
+> update
 > jetty-run
 
 I will download all its dependencies and build vBaD, then you
-will then have vBaD running on localhost at port 8080
+will then have vBaD running on localhost at port 8080.
 
 Point your browser at http://localhost:8080
+
+If you wish to deploy to a web container - at this point only
+Jetty is actively supported - the you can create a war by using
+the sbt package command.
+
+> package
 
 
 License
 -------
 
 vBaD is licensed under the Apache 2.0 License
-
-
-
 
 
