started adding specs

--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@
 Current TODO/IDEAS
 ------------------
 
+[] iframe add [showing: URL]across the bottom
 [] improve html/css
 [] improve templating
 [] add wizard
