--- a/README
+++ b/README
@@ -31,6 +31,8 @@ Currently vBaD provides:
 
 + basic dashboard with a rotating iframe with some information
   areas
+  - iframe times how long it takes to load and reports that in
+    a status pane
 
 
 Usage
@@ -43,8 +45,24 @@ sbt can be found here:
 
 http://code.google.com/p/simple-build-tool/
 
+You will need to first build James Strachan's webbytest
+
+bash$ git clone http://github.com/jstrachan/webbytest.git
+bash$ cd webbytest
+
+! Note webbytest has an issue (5) that needs resolving to work
+  for vBaD, namely change HtmlTestsProject to extend BasicScalaProject
+  rather than DefaultProject:
+  src/main/scala/webbytest/HtmlTestsProject.scala
+
+bash$ sbt
+> update
+> publish-local
+
+
 then do the following:
 
+bash$ cd ..
 bash$ git clone git://github.com/glenford/vBaD.git
 bash$ cd vBaD
 bash$ sbt
@@ -64,10 +82,17 @@ the sbt package command.
 
 > package
 
+If you wish to work on the codebase and use IntelliJ, ensure you
+have the scala plugin, and use the following to generate a project
+file
+
+> idea
+
+
+
 
 License
 -------
 
 vBaD is licensed under the Apache 2.0 License
-
 
