--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@
 Current TODO/IDEAS
 ------------------
 
+[] when CI build is unavailable, diplay a question mark
+
 [] improve html/css
 [] improve templating
 [] add wizard
